# ReachyMiniCompanion

./: .env.example  .gitignore  README.md  ROADMAP.md  SESSION_NOTES.md  TESTING.md  index.html  pyproject.toml  pytest.ini  style.css  test-dashboard.sh
docs/: AUDIO_SYSTEM.md  CONVERSATION_MANAGER.md  GEMINI_LIVE_API.md  TESTING.md
examples/: demo_camera_worker.py  demo_conversation_integration.py  demo_simple_conversation.py  simple_conversation.py
reachy_mini_companion/: __init__.py  audio_converters.py  camera_worker.py  config.py  conversation_manager.py  emotions.py  main.py  movement_manager.py
tests/: __init__.py  test-dashboard.sh  test_audio_converters.py  test_audio_echo.py  test_config.py  test_conversation.py  test_gemini_api.py  test_gemini_live.py
